Restore primitive 11